--- a/applications/source/ftp-source/README.adoc
+++ b/applications/source/ftp-source/README.adoc
@@ -92,7 +92,7 @@ $$ftp.supplier.tmp-file-suffix$$:: $$The suffix to use while the transfer is in 
 == Examples
 
 ```
-java -jar ftp_source.jar --ftp.remote-dir=foo --file.mode=lines --trigger.fixed-delay=60 --ftp.factory.host=ftpserver \
+java -jar ftp_source.jar --ftp.supplier.remote-dir=foo --file.consumer.mode=lines --ftp.factory.host=ftpserver \
          --ftp.factory.username=user --ftp.factory.password=pw --ftp.local-dir=/foo
 ```
 //end::ref-doc[]
