--- a/README.adoc
+++ b/README.adoc
@@ -38,22 +38,22 @@ The following are the four major components of this repository.
 |link:functions/function/object-detection-function/README.adoc[Object Detection(Tensorflow)]
 |link:functions/supplier/jms-supplier/README.adoc[JMS]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
-|link:functions/function/spel-function/README.adoc[SpEL]
+|link:functions/function/semantic-segmentation-function/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
 |link:functions/consumer/log-consumer/README.adoc[Log]
-|link:functions/function/splitter-function/README.adoc[Splitter]
+|link:functions/function/spel-function/README.adoc[SpEL]
 |link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
 |link:functions/consumer/mongodb-consumer/README.adoc[MongoDB]
-|link:functions/function/task-launch-request-function/README.adoc[Task Launch Request]
+|link:functions/function/splitter-function/README.adoc[Splitter]
 |link:functions/supplier/rabbit-supplier/README.adoc[RabbitMQ]
 |link:functions/consumer/mqtt-consumer/README.adoc[MQTT]
-|link:functions/function/tasklauncher-function/README.adoc[Task Launcher]
+|link:functions/function/task-launch-request-function/README.adoc[Task Launch Request]
 |link:functions/supplier/s3-supplier/README.adoc[AWS S3]
 |link:functions/consumer/rabbit-consumer/README.adoc[RabbitMQ]
-|link:functions/function/twitter-function/README.adoc[Twitter]
+|link:functions/function/tasklauncher-function/README.adoc[Task Launcher]
 |link:functions/supplier/tcp-supplier/README.adoc[TCP]
 |link:functions/consumer/redis-consumer/README.adoc[Redis]
-|
+|link:functions/function/twitter-function/README.adoc[Twitter]
 |link:functions/supplier/time-supplier/README.adoc[Time]
 |link:functions/consumer/s3-consumer/README.adoc[AWS S3]
 |
@@ -99,19 +99,19 @@ The following are the four major components of this repository.
 |link:applications/processor/object-detection-processor/README.adoc[Object Detection(Tensorflow)]
 |link:applications/source/mongodb-source/README.adoc[MongoDB]
 |link:applications/sink/mongodb-sink/README.adoc[MongoDB]
-|link:applications/processor/script-processor/README.adoc[Script]
+|link:applications/processor/semantic-segmentation-processor/README.adoc[Object Detection(Tensorflow)]
 |link:applications/source/mqtt-source/README.adoc[MQTT]
 |link:applications/sink/mqtt-sink/README.adoc[MQTT]
-|link:applications/processor/splitter-processor/README.adoc[Splitter]
+|link:applications/processor/script-processor/README.adoc[Script]
 |link:applications/source/rabbit-source/README.adoc[RabbitMQ]
 |link:applications/sink/rabbit-sink/README.adoc[RabbitMQ]
-|link:applications/processor/transform-processor/README.adoc[Transform]
+|link:applications/processor/splitter-processor/README.adoc[Splitter]
 |link:applications/source/s3-source/README.adoc[AWS S3]
 |link:applications/sink/redis-sink/README.adoc[Redis]
-|link:applications/processor/twitter-trend-processor/README.adoc[Twitter Trend]
+|link:applications/processor/transform-processor/README.adoc[Transform]
 |link:applications/source/tcp-source/README.adoc[TCP]
 |link:applications/sink/router-sink/README.adoc[Router]
-|
+|link:applications/processor/twitter-trend-processor/README.adoc[Twitter Trend]
 |link:applications/source/time-source/README.adoc[Time]
 |link:applications/sink/sftp-sink/README.adoc[SFTP]
 |
